Updates for Warnings