@@ -27,8 +27,6 @@ import junit.framework.TestCase;
 
 import org.junit.Test;
 
-import pcgen.base.util.AbstractMapToList;
-
 public abstract class AbstractMapToListTest extends TestCase
 {
 
@@ -254,26 +252,33 @@ public abstract class AbstractMapToListTest extends TestCase
 		assertTrue(dkm.containsInList(null, CONST_F));
 	}
 
-
 	@Test
 	public void testContainsAnyInList()
 	{
 		AbstractMapToList<Integer, Character> dkm = getMapToList();
-		assertFalse(dkm.containsAnyInList(Integer.valueOf(1), Collections.singletonList(CONST_D)));
+		assertFalse(dkm.containsAnyInList(Integer.valueOf(1),
+			Collections.singletonList(CONST_D)));
 		populate(dkm);
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1), Collections.singletonList(CONST_A)));
+		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
+			Collections.singletonList(CONST_A)));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsAnyInList(new Integer(1), Arrays.asList(new Character[] {CONST_A, CONST_D})));
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1), Arrays.asList(new Character[] {CONST_D, CONST_B})));
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1), Arrays.asList(new Character[] {CONST_C, CONST_B})));
-		assertFalse(dkm.containsAnyInList(Integer.valueOf(1), Arrays.asList(new Character[] {CONST_D, CONST_E, CONST_F})));
+		assertTrue(dkm.containsAnyInList(new Integer(1),
+			Arrays.asList(new Character[]{CONST_A, CONST_D})));
+		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
+			Arrays.asList(new Character[]{CONST_D, CONST_B})));
+		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
+			Arrays.asList(new Character[]{CONST_C, CONST_B})));
+		assertFalse(dkm.containsAnyInList(Integer.valueOf(1),
+			Arrays.asList(new Character[]{CONST_D, CONST_E, CONST_F})));
 
 		// add a second :)
 		dkm.addToListFor(Integer.valueOf(1), CONST_C);
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(1), Arrays.asList(new Character[] {CONST_C, CONST_F})));
+		assertTrue(dkm.containsAnyInList(Integer.valueOf(1),
+			Arrays.asList(new Character[]{CONST_C, CONST_F})));
 
 		// Test null stuff :)
-		assertTrue(dkm.containsAnyInList(Integer.valueOf(2), Arrays.asList(new Character[] {CONST_F, null})));
+		assertTrue(dkm.containsAnyInList(Integer.valueOf(2),
+			Arrays.asList(new Character[]{CONST_F, null})));
 		try
 		{
 			assertFalse(dkm.containsAnyInList(Integer.valueOf(2), null));
@@ -283,10 +288,13 @@ public abstract class AbstractMapToListTest extends TestCase
 		{
 			//Yep!
 		}
-		assertFalse(dkm.containsAnyInList(Integer.valueOf(2), Collections.EMPTY_LIST));
+		assertFalse(dkm.containsAnyInList(Integer.valueOf(2),
+			Collections.EMPTY_LIST));
 
-		assertTrue(dkm.containsAnyInList(null, Arrays.asList(new Character[] {CONST_A, CONST_F})));
-		assertFalse(dkm.containsAnyInList(null, Arrays.asList(new Character[] {CONST_A, CONST_D})));
+		assertTrue(dkm.containsAnyInList(null,
+			Arrays.asList(new Character[]{CONST_A, CONST_F})));
+		assertFalse(dkm.containsAnyInList(null,
+			Arrays.asList(new Character[]{CONST_A, CONST_D})));
 	}
 
 	@Test
